[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_menu/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/main_menu/music.ogg" type="AudioStream" id=3]
[ext_resource path="res://fonts/Country Western/Country Western.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/main_menu/Buttons.tres" type="Theme" id=5]
[ext_resource path="res://scenes/templates/scene_fader/SceneFader.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/templates/music_fader/MusicFader.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 180
outline_size = 10
font_data = ExtResource( 4 )

[node name="MainMenu" type="TextureRect"]
mouse_filter = 2
texture = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -530.926
margin_top = 71.2719
margin_right = 399.073
margin_bottom = 282.272
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HIGH MOON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1379.11
margin_top = 310.033
margin_right = 1665.11
margin_bottom = 657.033
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 286.0
margin_bottom = 110.0
focus_next = NodePath("../CreditsButton")
theme = ExtResource( 5 )
text = "New Game"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 286.0
margin_bottom = 224.0
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../NewGameButton")
theme = ExtResource( 5 )
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 286.0
margin_bottom = 338.0
focus_previous = NodePath("../CreditsButton")
theme = ExtResource( 5 )
text = "Exit"

[node name="Fader" parent="." instance=ExtResource( 6 )]
anchor_top = 0.000925926
anchor_bottom = 1.00093

[node name="BackgroundMusic" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 3 )
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
